web_static html pages syntax enhanced

--- a/web_static/103-index.html
+++ b/web_static/103-index.html
@@ -12,16 +12,14 @@
     </head>
     <body>
         <header>
-            <!-- Accessibility support for images -->
+            <!-- Accessibility support header logo -->
             <div class="logo">
                 <img src="./images/logo.png" alt="The website's logo">
             </div>
         </header>
         <div class="container">
             <section class="filters">
-                <button>
-                    Search
-                </button>
+                <button>Search</button>
                 <div class="locations">
                     <h3>States</h3>
                     <h4>California, Arizona...</h4>
@@ -55,10 +53,12 @@
             </section>
             <section class="places">
                 <h1>Places</h1>
-                <div class="container_1">
+                <div class="boxes">
                     <article>
-                        <h2>My home</h2>
-                        <div class="price_by_night">$80</div>
+                        <div class="place_header">
+                            <h2>My home</h2>
+                            <div class="price_by_night">$80</div>
+                        </div>
                         <div class="information">
                             <div class="max_guest">2 guests</div>
                             <div class="number_rooms">1 bedroom</div>
@@ -83,8 +83,10 @@
                         </div>
                     </article>
                     <article>
-                        <h2>Tiny house</h2>
-                        <div class="price_by_night">$65</div>
+                        <div class="place_header">
+                            <h2>Tiny house</h2>
+                            <div class="price_by_night">$65</div>
+                        </div>
                         <div class="information">
                             <div class="max_guest">4 guests</div>
                             <div class="number_rooms">2 bedroom</div>
@@ -105,32 +107,34 @@
                             </ul>
                         </div>
                     </article>
+                    <article>
+                        <div class="place_header">
+                            <h2>A suite</h2>
+                            <div class="price_by_night">$90</div>
+                        </div>
+                        <div class="information">
+                            <div class="max_guest">2 guests</div>
+                            <div class="number_rooms">1 bedroom</div>
+                            <div class="number_bathrooms">2 bathroom</div>
+                        </div>
+                        <div class="user"><strong>Owner:</strong> Christina Chiu</div>
+                        <div class="description">Beautiful suite with balcony worthy of Romeo and Juliet's love story.</div>
+                        <div class="amenities">
+                            <h2>Amenities</h2>
+                            <ul>
+                                <li class="one">TV</li>
+                                <li class="two">Wifi</li>
+                                <li class="three">Pet friendly</li>
+                            </ul>
+                        </div>
+                        <div class="reviews">
+                            <h2>1 Review</h2>
+                            <ul>
+                                <li><p><h3>From Roland the 27th January 2017</h3>The staff at the accommodation were incredibly friendly and accommodating. They went above and beyond to make sure our stay was comfortable and enjoyable. The room itself was clean and cozy, with all the amenities we needed. The location was also perfect, with easy access to restaurants, shops, and attractions. Overall, we had a great experience and would highly recommend this place to anyone looking for a comfortable and convenient stay.</p></li>
+                            </ul>
+                        </div>
+                    </article>
                 </div>
-                <article>
-                    <h2>A suite</h2>
-                    <div class="price_by_night">$90</div>
-                    <div class="information">
-                        <div class="max_guest">2 guests</div>
-                        <div class="number_rooms">1 bedroom</div>
-                        <div class="number_bathrooms">2 bathroom</div>
-                    </div>
-                    <div class="user"><strong>Owner:</strong> Christina Chiu</div>
-                    <div class="description">Beautiful suite with balcony worthy of Romeo and Juliet's love story.</div>
-                    <div class="amenities">
-                        <h2>Amenities</h2>
-                        <ul>
-                            <li class="one">TV</li>
-                            <li class="two">Wifi</li>
-                            <li class="three">Pet friendly</li>
-                        </ul>
-                    </div>
-                    <div class="reviews">
-                        <h2>1 Review</h2>
-                        <ul>
-                            <li><p><h3>From Roland the 27th January 2017</h3>The staff at the accommodation were incredibly friendly and accommodating. They went above and beyond to make sure our stay was comfortable and enjoyable. The room itself was clean and cozy, with all the amenities we needed. The location was also perfect, with easy access to restaurants, shops, and attractions. Overall, we had a great experience and would highly recommend this place to anyone looking for a comfortable and convenient stay.</p></li>
-                        </ul>
-                    </div>
-                </article>
             </section>
         </div>
         <footer>
