--- a/web_static/101-index.html
+++ b/web_static/101-index.html
@@ -15,9 +15,7 @@
         </header>
         <div class="container">
             <section class="filters">
-                <button>
-                    Search
-                </button>
+                <button>Search</button>
                 <div class="locations">
                     <h3>States</h3>
                     <h4>California, Arizona...</h4>
