--- a/web_static/103-index.html
+++ b/web_static/103-index.html
@@ -22,7 +22,7 @@
                 <button>Search</button>
                 <div class="locations">
                     <h3>States</h3>
-                    <h4>California, Arizona...</h4>
+                    <h4>California, Arizona</h4>
                     <ul class="popover">
                         <li>
                             <h2>Arizona:</h2>
@@ -42,7 +42,7 @@
                 </div>
                 <div class="amenities">
                     <h3>Amenities</h3>
-                    <h4>Internet, Kitchen...</h4>
+                    <h4>Internet, Kitchen</h4>
                     <ul class="popover">
                         <li>Internet</li>
                         <li>TV</li>
@@ -75,6 +75,7 @@
                             </ul>
                         </div>
                         <div class="reviews">
+                            <span>show</span>
                             <h2>2 Reviews</h2>
                             <ul>
                                 <li><p><h3>From Bob Dylan the 27th January 2017</h3>I really enjoyed my stay! Epic 5 star!</p></li>
